# wxhnotepad

./: .gitignore  README  Setup.hs  TODO  wxhaskell.cabal  wxhnotepad.cabal  wxhnotepad.smultronProject  wxnotepad.cabal
src/: Main.hs  Step1.hs  Step2.hs  Step3.hs  Step4.hs  Step5.hs  Step6.hs
